--- a/Docker_Steps.Rmd
+++ b/Docker_Steps.Rmd
@@ -110,3 +110,5 @@ shiny_write_docker(path = ".", appdir = "app")
 
 ```
 
+Within thermal at location of docker file, run command:
+docker build . -t shiny_college_app
