--- a/Docker_Steps.Rmd
+++ b/Docker_Steps.Rmd
@@ -111,4 +111,5 @@ shiny_write_docker(path = ".", appdir = "app")
 ```
 
 Within thermal at location of docker file, run command:
+*make sure docker desktop is running*
 docker build . -t shiny_college_app
